--- a/react/ecommerce-react/src/App.css
+++ b/react/ecommerce-react/src/App.css
@@ -136,3 +136,13 @@ header {
   border-radius: 5px;
   cursor: pointer;
 }
+
+.filter-btn {
+  background-color: #e81f91;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px
+}
